Florida is so Goddamn hot :(, Working on Info Bar

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
   "cSpell.words": [
+    "Chunsoft",
+    "Danganronpa",
     "heroicons",
+    "Kazutaka",
+    "Kodaka",
     "thefinals"
   ],
   "typescript.tsdk": "node_modules\\typescript\\lib"
