--- a/reddit-clone/package.json
+++ b/reddit-clone/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@heroicons/react": "^2.1.3",
     "@types/react": "^18.3.2",
+    "axios": "^1.7.2",
     "heroicons": "^2.1.3",
     "next": "^14.2.3",
     "react": "^18.3.1",
+    "react-clickout-handler": "^1.2.1",
+    "react-clickout-ts": "^2023.6.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
