--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
+  "type": "module",
   "dependencies": {
     "@heroicons/react": "^2.1.3",
     "@types/react": "^18.3.2",
     "axios": "^1.7.2",
+    "express": "^4.19.2",
     "heroicons": "^2.1.3",
     "next": "^14.2.3",
+    "nodemon": "^3.1.2",
     "react": "^18.3.1",
     "react-clickout-handler": "^1.2.1",
     "react-clickout-ts": "^2023.6.1",
