--- a/api/package.json
+++ b/api/package.json
@@ -5,32 +5,39 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "server": "nodemon server.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
+  "type": "module",
   "dependencies": {
     "@heroicons/react": "^2.1.3",
     "@types/react": "^18.3.2",
     "axios": "^1.7.2",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "heroicons": "^2.1.3",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.7.0",
+    "mongoose": "^8.4.0",
     "next": "^14.2.3",
+    "node": "^20.14.0",
     "nodemon": "^3.1.2",
     "react": "^18.3.1",
     "react-clickout-handler": "^1.2.1",
-    "react-dom": "^18.3.1",
-    "react-outside-click-handler": "^1.3.0",
-    "zustand": "^4.5.2"
+    "react-clickout-ts": "^2023.6.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/node": "20.12.12",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/react-outside-click-handler": "^1.3.3",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "^14.2.3",
