--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,7 @@
     "@heroicons/react": "^2.1.3",
     "@types/react": "^18.3.2",
     "axios": "^1.7.2",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
